--- a/craft/team.html
+++ b/craft/team.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Vigor &mdash; Website Template by Colorlib</title>
+    <title>Vigor &mdash; Website Template by Mujtaba</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -25,6 +25,7 @@
 
     <header role="banner">
         <nav class="navbar navbar-expand-lg  bg-dark">
+            <img src="images/logo.png" style="width:10%" alt="Logo of Verve">
             <div class="container-fluid">
                 <a class="navbar-brand " href="index.html">Vigor</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample05" aria-controls="navbarsExample05" aria-expanded="false" aria-label="Toggle navigation">
@@ -34,31 +35,12 @@
                 <div class="collapse navbar-collapse" id="navbarsExample05">
                     <ul class="navbar-nav pl-md-5 mr-auto">
                         <li class="nav-item">
-                            <a class="nav-link " href="index.html">Radio</a>
+                            <a class="nav-link " href="index.html"> Radio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="about.html">About</a>
+                            <a class="nav-link" href="about.html"> About</a>
                         </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="services.html" id="dropdown04" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Services</a>
-                            <div class="dropdown-menu" aria-labelledby="dropdown04">
-                                <a class="dropdown-item" href="#">Crossfit</a>
-                                <a class="dropdown-item" href="#">Fitness</a>
-                                <a class="dropdown-item" href="#">Powerlifting</a>
-                                <a class="dropdown-item" href="#">Gym</a>
-                                <a class="dropdown-item" href="#">Body Shaping</a>
-                                <a class="dropdown-item" href="#">Circuit</a>
-                            </div>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link " href="gallery.html">Gallery</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link active" href="coaches.html">Coaches</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="contact.html">Contact</a>
-                        </li>
+
                     </ul>
 
                     <div class="navbar-nav ml-auto">
