--- a/craft/contact.html
+++ b/craft/contact.html
@@ -27,6 +27,7 @@
 
     <header role="banner">
         <nav class="navbar navbar-expand-lg  bg-dark">
+            <img src="images/logo.png" style="width:10%" alt="Logo of Verve">
             <div class="container-fluid">
                 <a class="navbar-brand " href="index.html">VERVE</a>
 
@@ -44,14 +45,14 @@
                             <a class="nav-link " href="portfolio.html">Magazine</a>
                         </li>
                         <li class="nav-item ">
-                            <a class="nav-link " href="services.html">Verve TV</a>
+                            <a class="nav-link " href="services.html">TV</a>
 
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link " href="about.html">About</a>
+                            <a class="nav-link " href="about.html">About  </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="contact.html">Contact</a>
+                            <a class="nav-link" href="contact.html">Contact </a>
                         </li>
                     </ul>
 
