file-names changes by m amir

--- a/craft/team.html
+++ b/craft/team.html
@@ -35,7 +35,7 @@
                 <div class="collapse navbar-collapse" id="navbarsExample05">
                     <ul class="navbar-nav pl-md-5 mr-auto">
                         <li class="nav-item">
-                            <a class="nav-link " href="index.html"> Radio</a>
+                            <a class="nav-link " href="radio.html"> Radio</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="about.html"> About</a>
