--- a/craft/tv.html
+++ b/craft/tv.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Verve &mdash; Website template by Mujtaba</title>
+    <title>Verve &mdash; Website Template by Mujtaba</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -24,28 +24,28 @@
 </head>
 
 <body>
-
     <header role="banner">
         <nav class="navbar navbar-expand-lg  bg-dark">
             <img src="images/logo.png" style="width:10%" alt="Logo of Verve">
             <div class="container-fluid">
-                <a class="navbar-brand" href="index.html">VERVE</a>
+
+                <a class="navbar-brand " href="index.html">VERVE</a>
 
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample05" aria-controls="navbarsExample05" aria-expanded="false" aria-label="Toggle navigation">
-                  <span class="navbar-toggler-icon"></span>
+                    <span class="navbar-toggler-icon"></span>
                 </button>
 
 
                 <div class="collapse navbar-collapse" id="navbarsExample05">
                     <ul class="navbar-nav pl-md-5 ml-auto">
                         <li class="nav-item">
-                            <a class="nav-link " href="index.html"> Radio</a>
+                            <a class="nav-link " href="radio.html"> Radio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link " href="portfolio.html"> Magazine</a>
+                            <a class="nav-link " href="magzine.html"> Magazine</a>
                         </li>
                         <li class="nav-item ">
-                            <a class="nav-link " href="services.html"> TV</a>
+                            <a class="nav-link " href="tv.html"> TV</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link " href="about.html">About  </a>
@@ -66,55 +66,73 @@
             </div>
         </nav>
     </header>
+
     <!-- END header -->
 
-    <div class="slider-item overlay" data-stellar-background-ratio="0.5" style="background-color: black">
-        <div class="container">
-            <div class="row slider-text align-items-center justify-content-center">
-                <div class="col-lg-9 text-center col-sm-12 element-animate">
-                    <h1 class="mb-4">WE ARE VERVE</h1>
-                    <div class="btn-play-wrap mx-auto">
-                        <p class="mb-4">
-                            <a style="font-size: 54px" href="https://player.vimeo.com/video/343650061" class="fa fa-microphone"></a>
+    <div class="inner-page">
+        <div class="slider-item overlay" style="background-color:black" data-stellar-background-ratio="0.5">
+            <div class="container">
+                <div class="row slider-text align-items-center justify-content-center">
+                    <div class="col-lg-9 text-center col-sm-12 element-animate">
+                        <h1 class="mb-4">VERVE TV</h1>
+                        <p class="custom-breadcrumbs"><a href="index.html">Home</a> <span class="mx-3">/</span> verve tv
                         </p>
-
                     </div>
-                    <span>Play Radio live..</span>
-
                 </div>
             </div>
         </div>
-
     </div>
-
 
 
     <div class="section portfolio-section">
         <div class="container">
-            <div class="row mb-5">
-                <div class="col-12 text-center">
-                    <h2 class="mb-4 section-title" style="color: white !important">More About Verve Radio.</h2>
-                </div>
-            </div>
+
             <div class="row">
-                <div class="col-lg-6">
-                    <a href="https://vimeo.com/ververadio" target="blank10" class="work-thumb">
-                        <div class="work-text">
-                            <h2>Verve Radio Here</h2>
-                            <p>Click me.</p>
+                <div class="col-lg-12">
+                    <div class="row">
+                        <a href="https://www.youtube.com/channel/UCuHKE_e0868uSMGvZ4NKe6w?view_as=subscriber" target="blank77" class="work-thumb">
+                            <div class="work-text">
+                                <h2>Verve TV</h2>
+                                <p>Here you go ..</p>
+                            </div>
+                            <img src="images/verve_tv.jpg" alt="Image" class="img-fluid">
+                        </a>
+                        <div class="col-lg-1"></div>
+                        <div class="col-lg-7" style="color: white">
+                            <h2 style="color: white;font-weight: bold">Verve TV London</h2>
+                            <p> Verve TV Calling all students! How do you fancy becoming a member of Verve TV, the Student Union’s newest project to date! With a huge range of positions available including: presenters, animators, editors and lots more! Any
+                                further questions, please e-mail vervetv@londonmet.ac.uk We hope to see and hear from you very soon
+                            </p>
                         </div>
-                        <img src="images/viemo.jpeg" alt="Image" class="img-fluid">
-                    </a>
-
+                    </div>
                 </div>
-                <div class="col-lg-6 col-md-6 col-sm-12" class="img-fluid">
-                    <iframe src="https://player.vimeo.com/video/343650061" width="690" height="312" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
 
+
+            </div>
+
+        </div>
+    </div>
+
+    </div>
+
+
+
+    <div class="bg-primary py-5">
+        <div class="container text-center">
+            <div class="row justify-content-center">
+                <div class="col-lg-7">
+                    <h3 class="text-white mb-4 font-weight-normal">Do You Have An Awesome Project In Mind?</h3>
+                    <p class="text-white mb-5">Calling all students! How do you fancy becoming a member of Verve TV, the Student Union’s newest project to date! With a huge range of positions available including: presenters, animators, editors and lots more! Any further questions,
+                        please e-mail vervetv@londonmet.ac.uk We hope to see and hear from you very soon!
+                    </p>
+
+                    <p class="mb-0"><a href="contact.html" class="btn btn-outline-white px-4 py-3">Get In Touch!</a></p>
                 </div>
             </div>
 
         </div>
     </div>
+
 
     <footer class="site-footer" role="contentinfo">
         <div class="container">
@@ -139,10 +157,7 @@
                         <ul class="list-unstyled footer-link">
                             <li class="d-block">
                                 <span class="d-block">Address:</span>
-                                <span class="text-white">Harglenis Building
-                                        166-220 Holloway Road
-                                        London
-                                        N7 8DB</span>
+                                <span class="text-white">34 Street Name, City Name Here, United States</span>
                             </li>
                             <li class="d-block">
                                 <span class="d-block">Telephone:</span><span class="text-white">+1 242 4942 290</span>
