--- a/craft/about.html
+++ b/craft/about.html
@@ -26,9 +26,9 @@
 <body>
     <header role="banner">
         <nav class="navbar navbar-expand-lg  bg-dark">
-            <img src="images/logo.png" style="width:10%" alt="Logo of Verve">
+            <a target="blank22" href="https://www.londonmetsu.org.uk/"><img src="images/logo.png" style="width:80%;height: 100%;" alt="Logo of Verve"></a>
             <div class="container-fluid">
-                <a class="navbar-brand " href="index.html">VERVE</a>
+                <a class="navbar-brand" href="index.html">VERVE</a>
 
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample05" aria-controls="navbarsExample05" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
@@ -38,19 +38,19 @@
                 <div class="collapse navbar-collapse" id="navbarsExample05">
                     <ul class="navbar-nav pl-md-5 ml-auto">
                         <li class="nav-item">
-                            <a class="nav-link " href="index.html">Radio</a>
+                            <a class="nav-link " href="radio.html"> Radio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link " href="portfolio.html"> Magazine</a>
+                            <a class="nav-link " href="magzine.html"> Magazine</a>
                         </li>
                         <li class="nav-item ">
-                            <a class="nav-link " href="services.html"> TV</a>
+                            <a class="nav-link " href="tv.html"> TV</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link " href="about.html">About </a>
+                            <a class="nav-link " href="about.html">About  </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="contact.html">Contact </a>
+                            <a class="nav-link" href="contact.html">Contact  </a>
                         </li>
                     </ul>
 
