--- a/craft/contact.html
+++ b/craft/contact.html
@@ -39,20 +39,19 @@
                 <div class="collapse navbar-collapse" id="navbarsExample05">
                     <ul class="navbar-nav pl-md-5 ml-auto">
                         <li class="nav-item">
-                            <a class="nav-link " href="index.html">Radio</a>
+                            <a class="nav-link " href="radio.html"> Radio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link " href="portfolio.html">Magazine</a>
+                            <a class="nav-link " href="magzine.html"> Magazine</a>
                         </li>
                         <li class="nav-item ">
-                            <a class="nav-link " href="services.html">TV</a>
-
+                            <a class="nav-link " href="tv.html"> TV</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link " href="about.html">About  </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="contact.html">Contact </a>
+                            <a class="nav-link" href="contact.html">Contact  </a>
                         </li>
                     </ul>
 
